# hindsight-clients/python/hindsight_client_api/models/create_folder_request.py
@@ -28,8 +28,7 @@ class CreateFolderRequest(BaseModel):
     """ # noqa: E501
     name: StrictStr
     parent_id: Optional[StrictStr] = None
-    mission: Optional[StrictStr] = None
-    __properties: ClassVar[List[str]] = ["name", "parent_id", "mission"]
+    __properties: ClassVar[List[str]] = ["name", "parent_id"]
 
     model_config = ConfigDict(
         populate_by_name=True,
@@ -75,11 +74,6 @@ class CreateFolderRequest(BaseModel):
         if self.parent_id is None and "parent_id" in self.model_fields_set:
             _dict['parent_id'] = None
 
-        # set to None if mission (nullable) is None
-        # and model_fields_set contains the field
-        if self.mission is None and "mission" in self.model_fields_set:
-            _dict['mission'] = None
-
         return _dict
 
     @classmethod
@@ -93,8 +87,7 @@ class CreateFolderRequest(BaseModel):
 
         _obj = cls.model_validate({
             "name": obj.get("name"),
-            "parent_id": obj.get("parent_id"),
-            "mission": obj.get("mission")
+            "parent_id": obj.get("parent_id")
         })
         return _obj
 
